k8s/deployment.dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-service-deployment
  labels:
    app: shop-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop-service
  template:
    metadata:
      labels:
        app: shop-service
    spec:
      automountServiceAccountToken: false
      containers:
        - name: shop-service
          image: shop-service:v1
          imagePullPolicy: Never
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
              ephemeral-storage: "512Mi"
            limits:
              memory: "512Mi"
              cpu: "500m"
              ephemeral-storage: "1Gi"
          ports:
            - containerPort: 5000
            - containerPort: 50051
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 999
            capabilities:
              drop:
                - ALL
