k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-service-deployment
  labels:
    app: shop-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shop-service
  template:
    metadata:
      labels:
        app: shop-service
    spec:
      automountServiceAccountToken: false
      containers:
        - name: shop-service
          image: shop-service
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
            - containerPort: 50051
