k8s/ingress.dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: e-commerce-service-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /shops
            pathType: Prefix
            backend:
              service:
                name: shop-service-service
                port:
                  number: 5000
